--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
             <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
         </head>
             <body>
-                <img src="images/flying-pig.png" alt="cochon volant" id="flying-pig">
-                <img src="images/still-pig.png" alt="cochon assis" id="still-pig">
+                <img src="flying-pig.png" alt="cochon volant" id="flying-pig">
+                <img src="still-pig.png" alt="cochon assis" id="still-pig">
                 <h1>Piggy Pop!</h1>
                 <a href="jeux.html" class="cartoon-btn" id="play-btn">🐽 Lance-toi dans l’épopée céleste, cochon courageux</a>
                 <button class="cartoon-btn danger" id="quit-btn">🚪 Quitter</button>
@@ -19,7 +19,7 @@
                     <button class="btn small" id="exit-btn">Je fuis, je m'incline devant la vivacité des cochons célestes</button>
                 </div>
                 <div id="crying-pig" class="hidden">
-                    <img src="images/crying-pig.png" alt="cochon qui pleure">
+                    <img src="crying-pig.png" alt="cochon qui pleure">
                     <p>Snif.. tu m'abandonnes déja, moi qui commençait à t'apprécier..</p>
                 </div>
                 <script src="script.js"></script>
@@ -27,4 +27,5 @@
                     <p>&copy; 2025 Baptiste Corp — Même les cochons volants ont des droits 🐽🪽</p>
                 </footer>
             </body>
+
     </html>
