--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
                     <img src="crying-pig.png" alt="cochon qui pleure">
                     <p>Snif.. tu m'abandonnes déja, moi qui commençait à t'apprécier..</p>
                 </div>
+                <div id="cloudIntro" class="hidden">
+                  <img src="cloud.png" alt="Nuage d'intro" id="cloudImage">
+                <div id="cloudText">
+                    <h2>🐷 Piggy Pop!</h2>
+                        <p>Attrape les cochons volants pour marquer des points.<br>
+                         Évite les autres animaux ou tu perds des points.<br>
+                         Si un cochon touche le sol... Game Over, Bonne chance!</p>
+                    <button id="startGameButton">JOUER</button>
+                  </div>
+                </div>
                 <script src="script.js"></script>
                 <footer id="footer">
                     <p>&copy; 2025 Baptiste Corp — Même les cochons volants ont des droits 🐽🪽</p>
@@ -29,3 +39,4 @@
             </body>
 
     </html>
+
