--- a/jeux.html
+++ b/jeux.html
@@ -20,10 +20,11 @@
             </div>
             <div id="canvasWrapper">
                 <canvas id="gameCanvas" width="800" height="600"></canvas>
-                <button id="restartButton" style="display: none;">REJOUER</button>
+                <button id="continueButton" style="display: none;">CONTINUER</button>
             </div>
             </div>
             </div>
                 <script src="jeuxscript.js"></script>
         </body>
+
     </html>
