--- a/jeux.html
+++ b/jeux.html
@@ -20,7 +20,7 @@
             </div>
             <div id="canvasWrapper">
                 <canvas id="gameCanvas" width="800" height="600"></canvas>
-                <button id="continueButton" style="display: none;">CONTINUER</button>
+                <button id="restartButton" style="display: none;">REJOUER</button>
             </div>
             </div>
             </div>
@@ -28,3 +28,4 @@
         </body>
 
     </html>
+
