--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <p>Attrape les cochons volants pour marquer des points.<br>
                          Évite les autres animaux ou tu perds des points.<br>
                          Si un cochon touche le sol... Game Over, Bonne chance!</p>
-                    <button id="startGameButton">JOUER</button>
+                    <button id="continuebutton">CONTINUER</button>
                   </div>
                 </div>
                 <script src="script.js"></script>
@@ -39,4 +39,5 @@
             </body>
 
     </html>
+
 
