--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
                     <img src="crying-pig.png" alt="cochon qui pleure">
                     <p>Snif.. tu m'abandonnes déja, moi qui commençait à t'apprécier..</p>
                 </div>
-                <div id="cloudIntro" class="hidden">
-                  <img src="cloud.png" alt="Nuage d'intro" id="cloudImage">
+                <div id="cloudIntro">
+                  <img src="cloud.png" id="cloudImage" alt="Nuage">
                 <div id="cloudText">
                     <h2>🐷 Piggy Pop!</h2>
-                        <p>Attrape les cochons volants pour marquer des points.<br>
-                         Évite les autres animaux ou tu perds des points.<br>
-                         Si un cochon touche le sol... Game Over, Bonne chance!</p>
-                    <button id="continuebutton">CONTINUER</button>
-                  </div>
+                    <p>Attrape les cochons volants pour marquer des points.<br>
+                       Évite les autres animaux ou tu perds des points.<br>
+                       Si un cochon touche le sol... Game Over!</p>
+                    <button id="continueButton">CONTINUER</button>
+                </div>
+                </div>
                 </div>
                 <script src="script.js"></script>
                 <footer id="footer">
@@ -39,5 +40,6 @@
             </body>
 
     </html>
+
 
 
