--- a/jeux.html
+++ b/jeux.html
@@ -9,7 +9,7 @@
         <body>
             <div id="gameContainer">
 
-            <div id="scoreTopBar">
+            <div id="scoreTopBar" class="neon-bue">
                 <span id="currentScore">Score : 0000 pts</span>
             </div>
 
@@ -18,7 +18,7 @@
                 <h3>🏆 High Scores</h3>
                 <ol id="scoreList"></ol>
             </div>
-            <div id="canvasWrapper">
+            <div id="canvasWrapper" class="neon-pink">
                 <canvas id="gameCanvas" width="800" height="600"></canvas>
                 <button id="restartButton" style="display: none;">REJOUER</button>
             </div>
@@ -28,4 +28,5 @@
         </body>
 
     </html>
+
 
