--- a/jeux.html
+++ b/jeux.html
@@ -9,7 +9,7 @@
         <body>
             <div id="gameContainer">
 
-            <div id="scoreTopBar" class="neon-bue">
+            <div id="scoreTopBar" class="neon-blue">
                 <span id="currentScore">Score : 0000 pts</span>
             </div>
 
@@ -28,5 +28,6 @@
         </body>
 
     </html>
+
 
 
