--- a/jeux.html
+++ b/jeux.html
@@ -18,6 +18,7 @@
                 <h3>🏆 High Scores</h3>
                 <ol id="scoreList"></ol>
             </div>
+            <div id="comboDisplay">🔥 BONUS : 0</div>
             <div id="canvasWrapper" class="neon-pink">
                 <canvas id="gameCanvas" width="800" height="600"></canvas>
                 <button id="restartButton" style="display: none;">REJOUER</button>
@@ -28,6 +29,7 @@
         </body>
 
     </html>
+
 
 
 
