--- a/jeux.html
+++ b/jeux.html
@@ -10,9 +10,9 @@
   <div id="gameContainer">
 
     <div id="scoreTopBar" class="neon-blue">
-      <div id="scoreBar">
-        <span id="highScoreDisplay">🏆 Meilleur score : 000000 pts</span>
-        <span id="currentScore">Score : 000000 pts</span>
+      <div id="scoreContainer">
+        <span id="highScoreDisplay">🏆 Meilleur score : 0000 pts</span>
+        <span id="currentScore">Score : 0000 pts</span>
       </div>
     </div>
 
