--- a/jeux.html
+++ b/jeux.html
@@ -11,14 +11,13 @@
 
     <div id="scoreTopBar" class="neon-blue">
       <div id="scoreContainer">
-        <span id="highScoreDisplay">🏆 Meilleur score : 0000 pts</span>
         <span id="currentScore">Score : 0000 pts</span>
       </div>
     </div>
 
     <div id="mainArea">
       <div id="scoreBoard">
-        <h3>🏆 High Scores</h3>
+        <h3><span id="highScoreDisplay">🏆 Meilleur score : 0000 pts</span></h3>
         <ol id="scoreList"></ol>
       </div>
 
@@ -34,3 +33,4 @@
   <script src="jeuxscript.js"></script>
 </body>
 </html>
+
