--- a/jeux.html
+++ b/jeux.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Piggy Pop!</title>
   <link rel="stylesheet" href="jeuxstyle.css">
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
@@ -33,4 +34,5 @@
   <script src="jeuxscript.js"></script>
 </body>
 </html>
+
 
